# fittrack-pipeline

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  01_schema.sql  02_seed_exercises.sql  03_seed_athlete_data.sql  04_views_functions.sql  05_rls_policies.sql  06_staging_tables.sql  07_etl_procedures.sql  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_demo.py
.cursor/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: pipeline_config.yaml  quality_rules.yaml  sources.yaml
data/sample/: sample_body_metrics.csv  sample_exercises.json  sample_nutrition.json  sample_workout_log.csv
docs/: ARCHITECTURE.md  DATA_QUALITY_GUIDE.md  EXISTING_SYSTEM.md  GLOSSARY.md  LESSONS_LEARNED.md  MONITORING_GUIDE.md  PIPELINE_GUIDE.md  ROADMAP.md  SETUP.md
src/: __init__.py  orchestrator.py
src/ingestion/: __init__.py  api_ingestor.py  base_ingestor.py  file_ingestor.py
src/monitor/: __init__.py  alerter.py  dashboard.py  health_check.py  scheduler.py
src/quality/: __init__.py  anomaly_detector.py  profiler.py  reporter.py  scorer.py  validator.py
src/quality/contracts/: __init__.py  enforcer.py  models.py
src/quality/contracts/schemas/: body_metrics.schema.json  exercises.schema.json  nutrition_logs.schema.json  workouts.schema.json
src/quality/rules/: business_rules.yaml  freshness_rules.yaml  schema_rules.yaml
src/transformation/: __init__.py  cleaner.py  enricher.py  transformer.py
src/utils/: __init__.py  config_loader.py  data_generator.py  db_connector.py  logger.py
src/warehouse/: __init__.py  dim_builder.py  fact_builder.py  scd_handler.py
tests/: conftest.py  test_api_integration.py  test_contracts.py  test_data_generator.py  test_ingestion.py  test_pipeline_e2e.py  test_quality.py  test_transformation.py
tests/fixtures/api_responses/: usda_foods_search_page1.json  usda_foods_search_page2.json  wger_exercises_page1.json  wger_exercises_page2.json  wger_muscles.json
